--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,15 +38,19 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+ 
 );
+$text-input-placeholder-color:(white);
+$text-input-md-background-color :	#dedede;
+$text-input-md-show-focus-highlight : false;
 
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
+$text-input-md-highlight-color : color($colors,danger);
 
 
 // App Material Design Variables
