remove minor conflicts

--- a/src/pages/patient-details/patient-details.scss
+++ b/src/pages/patient-details/patient-details.scss
@@ -1,3 +1,16 @@
 page-item-details {
 
 }
+.ion-content{
+	background :#398AFF
+}
+.parent-div{
+	color : white;background :#398AFF
+}
+.child-div{
+	background :#398AFF;display: flex;justify-content: space-between;
+}
+.button-delete{
+	top : 200px;background:red;color:white;width : 100px
+}
+
